Changed Country In index.html

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <header>
       <div class="header__container">
         <div class="header__description">
-          <h1>Australia's most awarded online library platform</h1>
+          <h1>America's most awarded online library platform</h1>
           <h2>Find your dream book with <span class="purple">Library</span></h2>
           <a href="#features">
             <button class="btn">Browse books</button>
