uploading again, forgot to link buttons

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul class="nav__links">
           <li><a href="#" class="nav__link">Home</a></li>
           <li><a href="#" class="nav__link">Contact</a></li>
-          <li><a href="#" class="nav__link nav__link--primary">Books</a></li>
+          <li><a href="./books.html" class="nav__link nav__link--primary">Books</a></li>
         </ul>
         <button class="btn__menu" onclick="openMenu()">
           <i class="fas fa-bars"></i>
@@ -47,7 +47,7 @@
         <div class="header__description">
           <h1>America's most awarded online library platform</h1>
           <h2>Find your dream book with <span class="purple">Library</span></h2>
-          <a href="#features">
+          <a href="./books.html">
             <button class="btn">Browse books</button>
           </a>
         </div>
@@ -348,7 +348,7 @@
       <div class="container">
         <div class="row row__column">
           <h2>Explore more <span class="purple">Books</span></h2>
-          <a href="#features">
+          <a href="./books.html">
             <button class="btn">Browse books</button>
           </a>
         </div>
@@ -367,7 +367,7 @@
         <div class="footer__list">
           <a href="#" class="footer__link">Home</a>
           <a class="footer__link no-cursor">About</a>
-          <a href="#features" class="footer__link">Books</a>
+          <a href="./books.html" class="footer__link">Books</a>
           <a class="footer__link no-cursor">Contact</a>
         </div>
         <div class="footer__copyright">Copyright &copy; 2021 Library</div>
