--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
       <div class="nav__container">
         <img class="logo" src="assets/Library.svg" alt="">
         <ul class="nav__links">
-          <li><a href="#" class="nav__link">Home</a></li>
-          <li><a href="#" class="nav__link">Contact</a></li>
+          <li><a href="./index.html" class="nav__link">Home</a></li>
+          <li><a href="mailto:georgia.m.vrana@gmail.com" class="nav__link">Contact</a></li>
           <li><a href="./books.html" class="nav__link nav__link--primary">Books</a></li>
         </ul>
         <button class="btn__menu" onclick="openMenu()">
@@ -365,7 +365,7 @@
           </figure>
         </a>
         <div class="footer__list">
-          <a href="#" class="footer__link">Home</a>
+          <a href="./index.html" class="footer__link">Home</a>
           <a class="footer__link no-cursor">About</a>
           <a href="./books.html" class="footer__link">Books</a>
           <a class="footer__link no-cursor">Contact</a>
